# PerceptionISP

./: .gitignore  README.md  camera_sim_perception_isp_full_conversation_summary.md  humanoid_vla_perception_isp_chat_summary.md  pyproject.toml  robotperceptionisp.md
.github/workflows/: ci.yml
data/coco8/: data.yaml
data/yolo_smoke/: README.md  data.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  EVIDENCE_AND_LIMITATIONS.md  MIGRATION_V0_2.md  README.md  USER_GUIDE_KO.md  evaluation_status.md  implementation_coverage.md  literature_basis.md
docs/history/: evaluation_status_v0.1.md
docs/research/: PerceptionISP_Survey.md  literature_basis.md  perceptionISPscene.rtf  vlaE2Estack.md
examples/: README.md  calibration_optics_example.py  dnn_contract_example.py  hdr_example.py  run_demo.py  run_example_suite.py  sensor_metadata_example.py  temporal_example.py
reports/: README.md
reports/perception_nuscenes_scene0061_camerae2e_pipeline_showcase_v1/: DATA_NOTICE.md  EVIDENCE.md  artifacts_manifest.json  aux_map_catalog.json  checksums.sha256  environment.json  exposure_plane_sources.csv  index.html  metadata_origins.csv  source_manifest.json  summary.json
reports/perception_project_accomplishment_tabs_current_v1/: index.html  project_accomplishment_summary.json
reports/perception_project_status_current_v1/: index.html  project_status_summary.json
scripts/: download_lis_archive_guarded.py  download_lod_resume_loop.sh  download_pascalraw_full_parts.sh  extract_pascalraw_native_subset.sh
scripts/data/: download_lis_archive_guarded.py  download_lod_resume_loop.sh
src/perception_isp/: __init__.py  __main__.py  adverse_native_slice.py  adverse_task_slice.py  aodraw_acquisition.py  aodraw_dataset.py  (+97 more)
tests/: test_adverse_native_slice.py  test_adverse_task_slice.py  test_aodraw_acquisition.py  test_aodraw_annotation_audit.py  test_aodraw_dataset.py  test_aodraw_download_importer.py  test_aodraw_download_plan.py  test_aodraw_download_watch.py  test_aodraw_image_availability.py  test_aodraw_loader.py  test_aodraw_pipeline.py  test_aodraw_storage_cleanup.py  test_aux_contribution_audit.py  test_aux_dnn_export.py  test_aux_map_catalog.py  test_aux_training_rollup.py  test_benchmark_protocol.py  test_camerae2e_bridge.py  test_casebook.py  test_cfa_lenspsf_aux_ablation.py  test_cfa_lenspsf_casebook.py  test_cfa_lenspsf_detector_sweep.py  test_cfa_lenspsf_native_audit.py  test_cfa_lenspsf_proposal_audit.py  test_cfa_stress_sweep.py  test_claim_dashboard.py  test_claim_evidence_summary.py  test_claim_gate.py  test_claim_readiness.py  test_cli.py  test_comparison.py  test_condition_gate.py  test_condition_metrics.py  test_dense_input_ablation_gate.py  test_dense_select_test_gate.py  test_detector_box_support_audit.py  test_edge_confidence_suite.py  test_edge_fidelity_suite.py  test_eval_cli.py  test_example_suite.py  (+32 more)
(+110 files in other folders)
