[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-isp"
version = "0.1.0"
description = "Software reference implementation of a perception-oriented automotive ISP."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pillow"]

[project.scripts]
perception-isp = "perception_isp.cli:main"
perception-isp-eval = "perception_isp.eval_cli:main"
perception-isp-sweep = "perception_isp.resolution_sweep:main"
perception-isp-aux-export = "perception_isp.aux_export:main"
perception-isp-aux-train-smoke = "perception_isp.aux_train_smoke:main"
perception-isp-aux-train-dense = "perception_isp.aux_train_dense:main"
perception-isp-aux-eval-dense = "perception_isp.aux_eval_dense:main"
perception-isp-report-rollup = "perception_isp.report_rollup:main"
perception-isp-prepare-coco-subset = "perception_isp.prepare_coco_subset:main"
perception-isp-merge-comparison-reports = "perception_isp.merge_comparison_reports:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
