[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perception-isp"
version = "0.2.0"
description = "Software reference implementation of a perception-oriented automotive ISP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "pillow"]

[project.optional-dependencies]
raw = ["rawpy"]
ml = ["opencv-python-headless", "pyyaml", "torch", "ultralytics"]
camerae2e = ["h5py"]
dev = ["build", "pytest"]
all = ["h5py", "opencv-python-headless", "pyyaml", "rawpy", "torch", "ultralytics"]

[project.scripts]
perception-isp = "perception_isp.cli:main"

[project.urls]
Repository = "https://github.com/SeongcheolJeong/PerceptionISP"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
